# CS585-Shaokang-Wang

./: .travis _1.yml  .travis.yml  CMakeLists.txt  Coding_Standard.md  LICENSE  README.md  game.m.cpp
SFML-2.3.2/: FindSFML.cmake
SFML-2.3.2/share/SFML/cmake/Modules/: FindSFML.cmake
SFML-2.3.2/share/SFML/examples/X11/: X11
SFML-2.3.2/share/SFML/examples/ftp/: ftp
SFML-2.3.2/share/SFML/examples/opengl/: opengl
SFML-2.3.2/share/SFML/examples/pong/: pong
SFML-2.3.2/share/SFML/examples/shader/: shader
SFML-2.3.2/share/SFML/examples/sockets/: sockets
SFML-2.3.2/share/SFML/examples/sound/: sound
SFML-2.3.2/share/SFML/examples/sound-capture/: sound-capture
SFML-2.3.2/share/SFML/examples/voip/: voip
SFML-2.3.2/share/SFML/examples/window/: window
image/: Thumbs.db
src/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/containers/: CMakeLists.txt  dynamic_array.cpp  dynamic_array.h  map.cpp  map.h
src/engine/data/: CMakeLists.txt  json_entity.cpp  json_entity.h  json_parser.cpp  json_parser.h
src/engine/events/: CMakeLists.txt  event_bus.cpp  event_bus.h  event_dispatcher.cpp  event_dispatcher.h  ievent.cpp  ievent.h
src/engine/input/: CMakeLists.txt  input.cpp  input.h
src/engine/memory/: CMakeLists.txt  counting_allocator.cpp  counting_allocator.h  default_allocator.cpp  default_allocator.h  iallocator.cpp  iallocator.h  stack_guard.cpp  stack_guard.h
src/engine/rendering/: CMakeLists.txt  renderable_sprite.cpp  renderable_sprite.h  renderer.cpp  renderer.h
src/engine/scene/: CMakeLists.txt  icollider.cpp  icollider.h  itickable.cpp  itickable.h  nxn_scene_graph.cpp  nxn_scene_graph.h  rectangle_bounds.cpp  rectangle_bounds.h  scene.cpp  scene.h
src/game/: CMakeLists.txt
src/game/actors/: CMakeLists.txt  IActor.cpp  IActor.h  guard.cpp  guard.h  player.cpp  player.h  wall.cpp  wall.h  weapon.cpp  weapon.h
src/game/controllers/: CMakeLists.txt  blue_guard_controller.cpp  blue_guard_controller.h  maze.cpp  maze.h  move_to_controller.cpp  move_to_controller.h  player_controller.cpp  player_controller.h  red_guard_controller.cpp  red_guard_controller.h  state.cpp  state.h  state_machine.cpp  state_machine.h
test/: CMakeLists.txt  counting_allocator_test.cpp  counting_allocator_test.h  default_allocator_test.cpp  default_allocator_test.h  dynamic_array_test.cpp  dynamic_array_test.h  json_test.cpp  json_test.h  map_test.cpp  map_test.h  stack_guard_test.cpp  stack_guard_test.h  test_project1.cpp
